trying to fix the messed up margins on mobile
not sure what happend since yesterday but the col container is losing
it’s heigh at 750px. can’t find source of the problem atm.

--- a/Peterson Everybody/public_html/lsp.css
+++ b/Peterson Everybody/public_html/lsp.css
@@ -478,24 +478,6 @@ form {
 		font-size:18px;
 	}
 	
-	.mailform {
-		display:none;
-		visibility:hidden;
-	}
-	
-	#rightmail {
-		display:none;
-		visibility:hidden;
-		height:0;
-		margin:0;
-		padding:0;
-	}
-	
-	#leftmail {
-		display:block;
-		visibility:visible;
-	}
-	
 	/* rightcol responsiveness */
 	.panel.book-side {
 		padding-left:0;
